@@ -3,6 +3,10 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/04/13
+	* Now the bonus bAtkEle will be transferred directly to the weapon when the
+	  script is in the ammunition, and you are wielding a weapon that consumes
+	  ammo per atttack.
 2007/04/12
 	* Trade-requests now fail if the target is in a NPC.
 	* Some cleaning of the castend_map code to prevent the menuskill variable
